--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 html{
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   user-select: none;
-  overflow-x: hidden;
+  overflow: hidden;
   height: 100vh;
   position: relative;
 }
